--- a/day1/Day1.html
+++ b/day1/Day1.html
@@ -46,7 +46,7 @@
       
     </main> 
     <footer>
-        <p>Thanks for visit my page!</p>
+        <p>Thanks for visiting my page!</p>
     </footer>
 
     
