--- a/day4/task2new/images/task2.html
+++ b/day4/task2new/images/task2.html
@@ -51,33 +51,33 @@
     <div class="grid-container">
         <div class="card">
             <span class="badge">New</span>
-            <img src="ship.jpeg"alt="sample">
+            <img src="/day4/task2new/images/ship.jpeg"width=280 height=190 alt="sample">
             <h3>A Boat ride</h3>
             <p>Enjoy this breathtaking boat ride with your family for just Rs.3000/-. One of those journeys you will never forget. Location:Alappuzha.
             </p>
         </div>
          <div class="card">
-            <img src="scenary1.jpeg"alt="sample">
+            <img src="/day4/task2new/images/scenary1.jpeg"width=280 height=190 alt="sample">
             <h3>A Scenic Beauty</h3>
             <p>Scenaries are something we don't want to miss. The hills,skies,sun and the sea everything is soo peaceful to watch. One is able to refresh their mind no matter what.</p>
          </div>
           <div class="card">
-            <img src="scenary.jpeg"alt="sample">
+            <img src="/day4/task2new/images/scenary.jpeg"width=280 height=190 alt="sample">
             <h3>A Peaceful Valley</h3>
             <p>A calm, crystal-clear lake reflects the surrounding trees and mountains. The sun rises from behind the forest. This tranquil scene feels like a perfect escape into nature's untouched beauty.</p>
             </div>
              <div class="card">
-            <img src="butterfly.jpeg"alt="sample">
+            <img src="/day4/task2new/images/butterfly.jpeg"width=280 height=190 alt="sample">
             <h3>Butterflies amidst the dark</h3>
             <p>The forest is dark and quiet. Blue butterflies are flying around. The light makes the place look magical. It feels like a calm and beautiful night.</p>
             </div>
              <div class="card">
-            <img src="grapes.jpeg"alt="sample">
+            <img src="/day4/task2new/images/grapes.jpeg"width=280 height=190 alt="sample">
             <h3>Bunch of grapes</h3>
             <p>Purple grapes are hanging from a grapevine. The grapes look fresh and juicy. Green leaves surround the fruit. A beautiful scene from a vineyard.</p>
             </div>
              <div class="card">
-            <img src="bird.jpeg"alt="sample">
+            <img src="/day4//task2new/images/bird.jpeg"width=280 height=190 alt="sample">
             <h3>An observing bird </h3>
             <p>The bird looks calm and still. It gazes into the sky, as if lost in a world of serene thoughts and silent wonders.</p>
             </div>
