--- a/task2/task2.html
+++ b/task2/task2.html
@@ -13,7 +13,7 @@
         <h1 style="color: rgb(72, 119, 121);">My Work</h1>
         <div class="portfolio-container">
             <div class="card">
-                <img src="/task2/ecommerse2.jpeg" alt="project1">
+                <img class="cardimg" src="/task2/ecommerse2.jpeg" alt="project1">
                 <div class="card-content">
                     <span class="tag">Web App</span>
                     <h3>Online Store</h3>
@@ -22,7 +22,10 @@
                 </div>
             </div>
             <div class="card">
-                <img src="/task2/portfolio.jpg" alt="project1">
+            <!-- <img  class="cardimg" src="/task2/img.jpeg" alt="project1"> -->
+
+              <img  class="cardimg" src="/task2/portfolio.jpg" alt="project1">
+
                 <div class="card-content">
                     <span class="tag">Personal Portfolio</span>
                     <h3>Portfolio Website</h3>
@@ -31,7 +34,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="/task2/ecommerse3.jpeg" alt="project1">
+                <img  class="cardimg" src="/task2/ecommerse3.jpeg" alt="project1">
                 <div class="card-content">
                     <span class="tag">Mobile App</span>
                     <h3>Task Manager</h3>
