--- a/day1/Day1.html
+++ b/day1/Day1.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My favourite things</title>
 </head>
+
 <body>
+    <!-- Header Section -->
     <header>
-        <h1>
-       Welcome to my page
-        </h1>
-        </header>
-      <main>
-        <P>I'm excited to share a few of my favourite things with you.<br>Let's get started!
-            Here are some of the things i enjoy the most in life.
-        </P>
-        <br>
+        <h1>Welcome to my page</h1>
+    </header>
+    <main>
+        <p>
+            I'm excited to share a few of my favourite things with you.<br>
+            Let's get started! Here are some of the things I enjoy the most in life.
+        </p>
         <h2>My five favourite things</h2>
-        <br>
         <ul>
             <li>Coding</li>
             <li>Traveling</li>
@@ -25,28 +25,37 @@
             <li>Gardening</li>
             <li>Driving</li>
         </ul>
+        <!-- Image Section -->
         <h3>My favourite image</h3>
-        <img width="320"height="240"
-         src="https://thumbs.dreamstime.com/b/beautiful-autumn-scenery-park-beautiful-autumn-scenery-park-outdoor-photography-sunrise-light-101482086.jpg">
-       <p>
-        <br>
+        <img width="320" height="240"
+            src="https://thumbs.dreamstime.com/b/beautiful-autumn-scenery-park-beautiful-autumn-scenery-park-outdoor-photography-sunrise-light-101482086.jpg"
+            alt="Beautiful autumn scenery" title="Beautiful autumn scenery in a park">
+
+        <!-- Link Section -->
         <p>
-        Visit my favourite website:
-        <a href=https://en.wikipedia.org/wiki/Wikipedia>clickme</a>
+            Visit my favourite website:
+            <a href="https://en.wikipedia.org/wiki/Wikipedia" target="_blank">Click me</a>
         </p>
-       </p>
-       <h3>Watch this video</h3>
-      <iframe width="320"height="240" src="https://www.youtube.com/embed/98yln2KsuVg" title="Inspirational Speech- Muniba Mazari | Motivational Short Video | bbcc_S" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-       
-       </video>
-      <h3>Listen to this audio</h3>
-      <audio controls>
-        <source src="audio/The Beauty of Existence Arabic Naat Heart Touching Nasheed MP3.mp3">
+
+        <!-- Video Section -->
+        <h3>Watch this video</h3>
+        <iframe width="320" height="240" src="https://www.youtube.com/embed/98yln2KsuVg"
+            title="Inspirational Speech - Muniba Mazari" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+        </iframe>
+
+        <!-- Audio Section -->
+        <h3>Listen to this audio</h3>
+        <audio controls>
+            <source src="audio/The Beauty of Existence Arabic Naat Heart Touching Nasheed MP3.mp3">
         </audio>
-      
-    </main> 
+    </main>
+
+    <!-- Footer Section -->
     <footer>
         <p>Thanks for visiting my page!</p>
     </footer>
 </body>
+
 </html>
