--- a/day1/Day1.html
+++ b/day1/Day1.html
@@ -39,6 +39,13 @@
 
         <!-- Video Section -->
         <h3>Watch this video</h3>
+        <video width="320" height="240" controls autoplay muted loop>
+            <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+                type="video/webm" />
+            Your browser does not support the video tag.
+        </video>
+
+        <h3>My favourite video</h3>
         <iframe width="320" height="240" src="https://www.youtube.com/embed/98yln2KsuVg"
             title="Inspirational Speech - Muniba Mazari" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
